name:              rsvp-site
version:           0.0.0
cabal-version:     >= 1.10
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src
    exposed-modules:
      Application
      Routes
      AppType
      Foundation
      Helpers.Forms
      Import
      Import.NoFoundation
      Model
      Model.BCrypt
      Model.Instances
      Settings
      Settings.StaticFiles
      Handler.Common
      Handler.Home
      Handler.Profile
      Handler.Admin.Event
      Handler.Curator
      Handler.Event

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
        build-depends: foreign-store
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    default-extensions: BangPatterns ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric EmptyDataDecls FlexibleContexts FlexibleInstances GADTs GeneralizedNewtypeDeriving MultiParamTypeClasses NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables TemplateHaskell TupleSections TypeFamilies TypeOperators ViewPatterns


    default-language:    Haskell2010
    build-depends:
                   -- Due to a bug in GHC 8.0.1, we block its usage
                   -- See: https://ghc.haskell.org/trac/ghc/ticket/12130
        base                          >= 4.8.2.0    && < 4.9
                                  || >= 4.9.1.0    && < 5

      , yesod                         >= 1.4.3      && < 1.5
      , yesod-core                    >= 1.4.30     && < 1.5
      , yesod-auth                    >= 1.4.0      && < 1.5
      , yesod-static                  >= 1.4.0.3    && < 1.6
      , yesod-form                    >= 1.4.0      && < 1.5
      , classy-prelude                >= 0.10.2
      , classy-prelude-conduit        >= 0.10.2
      , classy-prelude-yesod          >= 1.1
      , bytestring                    >= 0.9        && < 0.11
      , text                          >= 0.11       && < 2.0
      , persistent                    >= 2.0        && < 2.7
      , persistent-postgresql         >= 2.1.1      && < 2.7
      , persistent-template           >= 2.0        && < 2.7
      , esqueleto
      , template-haskell
      , shakespeare                   >= 2.0        && < 2.1
      , hjsmin                        >= 0.1        && < 0.3
      , monad-control                 >= 0.3        && < 1.1
      , wai-extra                     >= 3.0        && < 3.1
      , yaml                          >= 0.8        && < 0.9
      , http-conduit                  >= 2.1        && < 2.3
      , directory                     >= 1.1        && < 1.4
      , warp                          >= 3.0        && < 3.3
      , data-default
      , aeson                         >= 0.6        && < 1.1
      , conduit                       >= 1.0        && < 2.0
      , conduit-extra                 >= 1.0        && < 2.0
      , monad-logger                  >= 0.3        && < 0.4
      , fast-logger                   >= 2.2        && < 2.5
      , wai-logger                    >= 2.2        && < 2.4
      , file-embed
      , bcrypt
      , safe
      , errors
      , unordered-containers
      , containers
      , vector
      , time
      , transformers
      , uuid
      , case-insensitive
      , wai

executable         rsvp-site
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    default-language:  Haskell2010
    build-depends:     base, rsvp-site


    default-extensions: BangPatterns ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric EmptyDataDecls FlexibleContexts FlexibleInstances GADTs GeneralizedNewtypeDeriving MultiParamTypeClasses NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables TemplateHaskell TupleSections TypeFamilies TypeOperators ViewPatterns
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N


test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    default-language:  Haskell2010
    other-modules:
      Handler.CommonSpec
      Handler.EventSpec
      Handler.HomeSpec
      Handler.ProfileSpec
      TestImport
    hs-source-dirs:    test
    ghc-options:       -Wall


    default-extensions: BangPatterns ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric EmptyDataDecls FlexibleContexts FlexibleInstances GADTs GeneralizedNewtypeDeriving MultiParamTypeClasses NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables TemplateHaskell TupleSections TypeFamilies TypeOperators ViewPatterns

    build-depends:
        base
      , rsvp-site
      , yesod-auth
      , yesod-test >= 1.5.2 && < 1.6
      , yesod-core
      , yesod
      , persistent
      , persistent-postgresql
      , resourcet
      , monad-logger
      , shakespeare
      , transformers
      , hspec >= 2.0.0
      , classy-prelude
      , classy-prelude-yesod
      , aeson


executable         seed
    if flag(library-only)
        Buildable: False

    main-is:           Seed.hs
    hs-source-dirs:    test
    default-language:  Haskell2010
    build-depends:     base
                     , rsvp-site
                     , monad-logger
                     , persistent
                     , persistent-postgresql
